firestore authentication, broken redux management

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-logger": "^3.0.8",
     "autoprefixer": "^9",
     "firebase": "^8.2.2",
     "node-sass": "4.14.1",
@@ -21,11 +22,16 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-test-renderer": "^17.0.1",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.14.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "redux-toolkit": "^1.1.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-jest": "^26.4.4",
