--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/redux-logger": "^3.0.8",
     "autoprefixer": "^9",
     "firebase": "^8.2.2",
+    "firebase-admin": "^9.4.2",
     "node-sass": "4.14.1",
     "postcss": "^7",
     "react": "^17.0.1",
