--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "4.14.1",
     "postcss": "^7",
     "react": "^17.0.1",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.10.0",
