--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "redux-toolkit": "^1.1.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
