--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.1.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.20",
+    "@material-ui/x-grid": "^4.0.0-alpha.21",
     "@reduxjs/toolkit": "^1.5.0",
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
     "@testing-library/dom": "^7.21.4",
