--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "firebase": "^8.2.2",
     "headroom.js": "0.11.0",
     "moment": "2.26.0",
-    "node-sass": "4.14.1",
     "nouislider": "14.5.0",
     "postcss": "^7",
     "react": "^17.0.1",
@@ -48,6 +47,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "redux-toolkit": "^1.1.2",
+    "sass": "^1.32.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.3",
