--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "eslint-plugin-react-hooks": "2.x",
         "firebase": "^8.2.2",
         "headroom.js": "0.11.0",
-        "moment": "2.26.0",
+        "moment": "^2.29.1",
         "nouislider": "14.5.0",
         "postcss": "^7",
         "react": "^17.0.1",
