--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-bootstrap-switch": "^15.5.3",
         "react-datetime": "^3.0.4",
         "react-dom": "^17.0.1",
+        "react-dropdown": "^1.9.2",
         "react-google-maps": "^9.4.5",
         "react-photoswipe": "^1.3.0",
         "react-redux": "^7.2.2",
