--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "^17.0.1",
         "react-animated-css": "^1.2.1",
         "react-bootstrap-switch": "^15.5.3",
+        "react-csv": "^2.0.3",
         "react-datetime": "^3.0.4",
         "react-dom": "^17.0.1",
         "react-google-maps": "^9.4.5",
