--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "@material-ui/core": "^4.11.3",
         "@material-ui/data-grid": "^4.0.0-alpha.21",
         "@reduxjs/toolkit": "^1.5.0",
-        "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+        "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.3",
         "@testing-library/dom": "^7.21.4",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -23,7 +23,6 @@
         "@typescript-eslint/parser": "^4.15.0",
         "autoprefixer": "^9",
         "babel-eslint": "10.x",
-        "classnames": "2.2.6",
         "eslint-config-react-app": "^6.0.0",
         "eslint-plugin-flowtype": "4.x",
         "eslint-plugin-import": "2.x",
@@ -31,24 +30,18 @@
         "eslint-plugin-react": "7.x",
         "eslint-plugin-react-hooks": "2.x",
         "firebase": "^8.2.2",
-        "headroom.js": "0.11.0",
         "moment": "^2.29.1",
-        "nouislider": "14.5.0",
         "postcss": "^7",
         "react": "^17.0.1",
         "react-animated-css": "^1.2.1",
         "react-bootstrap-switch": "^15.5.3",
         "react-csv": "^2.0.3",
-        "react-datetime": "^3.0.4",
         "react-dom": "^17.0.1",
-        "react-google-maps": "^9.4.5",
-        "react-photoswipe": "^1.3.0",
         "react-redux": "^7.2.2",
         "react-redux-firebase": "^3.10.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "react-select": "^4.0.2",
-        "react-tagsinput": "^3.19.0",
         "react-test-renderer": "^17.0.1",
         "reactstrap": "^8.9.0",
         "redux": "^4.0.5",
