--- a/package.json
+++ b/package.json
@@ -19,19 +19,11 @@
         "@types/react-redux": "^7.1.15",
         "@types/react-router-dom": "^5.1.7",
         "@types/redux-logger": "^3.0.8",
-        "@typescript-eslint/eslint-plugin": "^4.15.0",
-        "@typescript-eslint/parser": "^4.15.0",
         "autoprefixer": "^9",
-        "babel-eslint": "10.x",
-        "eslint-config-react-app": "^6.0.0",
-        "eslint-plugin-flowtype": "4.x",
-        "eslint-plugin-import": "2.x",
-        "eslint-plugin-jsx-a11y": "6.x",
-        "eslint-plugin-react": "7.x",
-        "eslint-plugin-react-hooks": "2.x",
         "firebase": "^8.2.2",
         "moment": "^2.29.1",
         "postcss": "^7",
+        "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-animated-css": "^1.2.1",
         "react-bootstrap-switch": "^15.5.3",
@@ -52,7 +44,6 @@
         "redux-toolkit": "^1.1.2",
         "sass": "^1.32.8",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
-        "ts-jest": "^26.4.4",
         "typescript": "^4.0.3",
         "web-vitals": "^0.2.4"
     },
@@ -81,6 +72,16 @@
         ]
     },
     "devDependencies": {
-        "prettier": "2.2.1"
+        "prettier": "2.2.1",
+        "@typescript-eslint/eslint-plugin": "^4.15.0",
+        "@typescript-eslint/parser": "^4.15.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.21.0",
+        "eslint-config-react-app": "^6.0.0",
+        "eslint-plugin-flowtype": "^5.3.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^4.2.0"
     }
 }
