--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@testing-library/user-event": "^12.8.0",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
+        "@types/react-csv": "^1.1.1",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.15",
         "@types/react-router-dom": "^5.1.7",
@@ -72,7 +73,6 @@
         ]
     },
     "devDependencies": {
-        "prettier": "2.2.1",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
         "babel-eslint": "^10.1.0",
@@ -82,6 +82,7 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.22.0",
-        "eslint-plugin-react-hooks": "^4.2.0"
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "prettier": "2.2.1"
     }
 }
