--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "dependencies": {
         "@craco/craco": "^6.1.0",
-        "@inovua/reactdatagrid-community": "^4.0.29",
+        "@inovua/reactdatagrid-community": "4.0.26",
         "@material-ui/core": "^4.11.3",
         "@material-ui/data-grid": "^4.0.0-alpha.21",
         "@reduxjs/toolkit": "^1.5.0",
