YADA-73 YADA-74 YADA-75 partially implemented functions to transform logger data into Nivo data

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@inovua/reactdatagrid-community": "4.0.26",
         "@material-ui/core": "^4.11.3",
         "@material-ui/data-grid": "^4.0.0-alpha.21",
+        "@nivo/core": "^0.67.0",
+        "@nivo/line": "^0.67.0",
         "@reduxjs/toolkit": "^1.5.0",
         "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.3",
         "@testing-library/dom": "^7.21.4",
@@ -23,7 +25,6 @@
         "autoprefixer": "^9",
         "firebase": "^8.2.2",
         "moment": "^2.29.1",
-        "nivo": "^0.31.0",
         "postcss": "^7",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
