--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-bootstrap-switch": "^15.5.3",
         "react-csv": "^2.0.3",
         "react-dom": "^17.0.1",
+        "react-loading-skeleton": "^2.2.0",
         "react-redux": "^7.2.2",
         "react-redux-firebase": "^3.10.0",
         "react-router-dom": "^5.2.0",
