--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "redux-toolkit": "^1.1.2",
         "sass": "^1.32.8",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
+        "tslib": "^2.1.0",
         "typescript": "^4.0.3",
         "web-vitals": "^0.2.4"
     },
