--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "baseUrl": "src"
+        "baseUrl": "src",
+        "importHelpers": true,
+        "downlevelIteration": true
     },
     "include": ["src", "src/@types"]
 }
