--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.8.0",
+        "@types/d3-color": "^2.0.1",
+        "@types/d3-interpolate": "^2.0.0",
+        "@types/d3-scale": "^3.2.2",
         "@types/d3-time": "^2.0.0",
         "@types/d3-time-format": "^3.0.0",
         "@types/node": "^12.0.0",
@@ -25,6 +28,9 @@
         "@types/react-router-dom": "^5.1.7",
         "@types/redux-logger": "^3.0.8",
         "autoprefixer": "^9",
+        "d3-color": "^2.0.0",
+        "d3-interpolate": "^2.0.1",
+        "d3-scale": "^3.2.4",
         "d3-time": "^2.0.0",
         "d3-time-format": "^3.0.0",
         "firebase": "^8.2.2",
